feat: included function to create events
